# compression-safeguards

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  README.md  _typos.toml  crash-c6c1198d712e03f8aa055e89e24409199c1bc0b2  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
bench/: .gitignore  compression.ipynb  compression.py  era5_o3_pv_2024_08_02_12:00.nc  era5_t2m_2012_12_01_14:00.nc  era5_tp_2024_08_02_10:00.nc
docs/: api.md  generate_api.py  index.md  requirements.txt
docs/js/: katex.js
examples/: bias.ipynb  chunked.ipynb  derivative.ipynb  dssim.ipynb  error-distribution.ipynb  incremental.ipynb  isosurface.ipynb  kinetic-energy.ipynb  latent-heat-flux.ipynb  log-scale.ipynb  missing.ipynb  nan.ipynb  precipitation.ipynb  progressive.ipynb  rmse.ipynb  soft.ipynb  vorticity.ipynb  wvpa.ipynb
examples/data/: README_Data.txt
examples/data/cems-ercnfdr/: .gitignore  CITATION  data.grib  fetch.py
examples/data/era5-daily-2tm-2024-01/: CITATION  data.nc  fetch.py
examples/data/era5-lh/: CITATION  data.nc  fetch.py
examples/data/era5-pr/: CITATION  data.nc  fetch.py
examples/data/era5-q/: data.nc  fetch.py
examples/data/era5-uv/: CITATION  data.nc  fetch.py
examples/data/hoaps-c.r30.h06.wvpa.2020-08/: CITATION  data.nc  fetch.py
examples/data/isabel/: CITATION  README.md  fetch.py
examples/data/obs-pr/: README.txt  belem.csv  helsinki.csv
fuzz/: fuzz_chunking.py  fuzz_intervals.py  fuzz_qois.py  fuzz_safeguards.py
src/compression_safeguards/: __init__.py  api.py  cast.py  collection.py  intervals.py  quantizer.py  typing.py
src/compression_safeguards/safeguards/: __init__.py  abc.py  eb.py  qois.py
src/compression_safeguards/safeguards/_qois/: __init__.py  __main__.py  amath.py  array.py  associativity.py  bound.py  compile.py  eb.py  eval.py  findiff.py  finite_difference.py  interval.py  lexer.py  math.py  parser.py  re.py  symfunc.py  typing.py  vars.py
src/compression_safeguards/safeguards/_qois/expr/: abc.py  abs.py  addsub.py  array.py  classification.py  combinators.py  comparison.py  constfold.py  data.py  divmul.py  finite_difference.py  group.py  hashing.py  hyperbolic.py  literal.py  logexp.py  neg.py  power.py  reciprocal.py  reporter.py  round.py  sign.py  square.py  trigonometric.py  typing.py  where.py
src/compression_safeguards/safeguards/_qois/sly/: __main__.py  expr.py  lexer.py  parser.py
src/compression_safeguards/safeguards/_qois/sly/expr/: abc.py  add.py  addsub.py  array.py  constfold.py  data.py  divmul.py  group.py  hyperbolic.py  literal.py  logexp.py  neg.py  power.py  round.py  sign.py  square.py  trigonometric.py  typing.py
src/compression_safeguards/safeguards/combinators/: all.py  any.py  assume_safe.py  safe.py  select.py
src/compression_safeguards/safeguards/pointwise/: __init__.py  abc.py  abs.py  eb.py  ratio.py  rel.py  same.py  sign.py  zero.py
src/compression_safeguards/safeguards/pointwise/qoi/: abs.py  eb.py
src/compression_safeguards/safeguards/stencil/: __init__.py  abc.py  monotonicity.py
src/compression_safeguards/safeguards/stencil/qoi/: abs.py  eb.py
src/compression_safeguards/utils/: _compat.py  _float128.py  binding.py  bindings.py  cast.py  error.py  intervals.py  typing.py
src/numcodecs_guardrail/: __init__.py
src/numcodecs_guardrail/guardrail/: __init__.py  abs.py  rel_or_abs.py
src/numcodecs_guardrails/: __init__.py
src/numcodecs_guardrails/guardrails/: __init__.py  abs.py  rel_or_abs.py
src/numcodecs_guardrails/guardrails/elementwise/: __init__.py  abs.py  monotonic.py  monotonicity.py  rel_or_abs.py
src/numcodecs_safeguards/: __init__.py  cast.py  codec.py  intervals.py  lossless.py  quantizer.py
src/numcodecs_safeguards/safeguards/: __init__.py  abc.py
src/numcodecs_safeguards/safeguards/_qois/: __init__.py  amath.py  array.py  compile.py  eb.py  re.py
src/numcodecs_safeguards/safeguards/combinators/: all.py  any.py  safe.py
src/numcodecs_safeguards/safeguards/elementwise/: __init__.py  abc.py  abs.py  abs_findiff.py  decimal.py  findiff_abs.py  monotonicity.py  ratio.py  ratio_or_abs.py  rel.py  rel_or_abs.py  sign.py  zero.py
src/numcodecs_safeguards/safeguards/elementwise/findiff/: __init__.py  abs.py
src/numcodecs_safeguards/safeguards/elementwise/logical/: __init__.py  all.py  any.py
src/numcodecs_safeguards/safeguards/global_/: __init__.py  abc.py  rmse.py
src/numcodecs_safeguards/safeguards/pointwise/: abc.py  abs.py  qoi.py  ratio.py  rel.py  sign.py  zero.py
src/numcodecs_safeguards/safeguards/pointwise/logical/: __init__.py  all.py  any.py
src/numcodecs_safeguards/safeguards/pointwise/qoi/: __init__.py  abs.py
src/numcodecs_safeguards/safeguards/stencil/: __init__.py  abc.py  monotonicity.py
src/numcodecs_safeguards/safeguards/stencil/findiff/: __init__.py  abs.py
src/numcodecs_safeguards/safeguards/stencil/qoi/: __init__.py  abs.py
src/numcodecs_safeguards/safeguards/stochastic/: __init__.py  abc.py  bias.py
tests/: codecs.py  fuzz.py  monotonicity.py  test_abs.py  test_abs_findiff.py  test_accidental_chunking.py  test_any.py  test_any_all.py  test_assume_safe.py  test_bindings.py  test_cast.py  test_chunking.py  test_combinator.py  test_decimal.py  test_eb_abs.py  test_eb_ratio.py  test_eb_rel.py  test_findiff.py  test_findiff_abs.py  test_finite_difference.py  test_float128.py  test_intervals.py  test_kind.py  test_monotonic.py  test_monotonicity.py  test_printer_problem.py  test_qoi.py  test_qoi_abs.py  test_qoi_abs_pw.py  test_qoi_abs_stencil.py  test_qoi_eb_pw.py  test_qoi_eb_stencil.py  test_qoi_stencil_abs.py  test_ratio.py  test_ratio_or_abs.py  test_rel.py  test_rel_or_abs.py  test_same.py  test_select.py  test_sign.py  (+1 more)
