[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numcodecs-safeguards"
version = "0.0.1"
description = "Fearless lossy compression using safeguards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numcodecs>=0.13.0,<0.17",
    "numcodecs-combinators~=0.2.3",
    "numpy~=2.0",
    # "numpy-quaddtype~=0.0.7", # pip install -i https://test.pypi.org/simple/ numpy-quaddtype~=0.0.7
    "varint~=1.0",
    "typing-extensions~=4.6",
    "dahuffman~=0.4.0",
    "sympy~=1.14.0",
]

[dependency-groups]
bench = [
    "earthkit-plots~=0.3.1",
    "numcodecs-wasm~=0.1.6",
    "numcodecs-wasm-sz3~=0.6.0",
    "numcodecs-wasm-zfp~=0.5.1",
    "numcodecs-wasm-zstd~=0.3.0",
    "xarray~=2025.1",
    "netcdf4~=1.7.2",
    "tqdm~=4.0",
    "matplotlib~=3.10.0",
    "mpl-ascii~=0.10.0",
]
dev = ["ruff~=0.9"]
examples = [
    "cdsapi~=0.7.5",
    "jupyterlab",
    "numcodecs-wasm~=0.1.6",
    "numcodecs-wasm-sz3~=0.6.0",
    "numcodecs-wasm-tthresh~=0.2.0",
    "numcodecs-wasm-zfp-classic~=0.3.1",
    "xarray~=2025.1",
    "netcdf4~=1.7.2",
    "matplotlib~=3.10.0",
]
fuzz = ["atheris~=2.3"]
test = ["pytest~=8.3", "pytest-xdist~=3.6", "pytest-forked~=1.6"]
typing = ["mypy~=1.14"]

[project.entry-points."numcodecs.codecs"]
"safeguards" = "numcodecs_safeguards.codec:SafeguardsCodec"
"safeguards.lossless.huffman" = "numcodecs_safeguards.lossless:HuffmanCodec"
"safeguards.lossless.delta_huffman" = "numcodecs_safeguards.lossless:DeltaHuffmanCodec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"numcodecs_safeguards" = ["py.typed"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
xfail_strict = true

[[tool.mypy.overrides]]
module = [
    "dahuffman.*",
    "numcodecs.*",
    "numpy_quaddtype.*",
    "sympy.*",
    "varint.*",
]
follow_untyped_imports = true
