[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compression-safeguards"
version = "0.0.1"
description = "Fearless lossy compression using safeguards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy~=2.0",
    "numpy-quaddtype~=0.0.1; sys_platform != 'emscripten'",
    "typing-extensions~=4.6",
    "sympy~=1.14.0",
]

[dependency-groups]
bench = [
    "earthkit-plots~=0.3.1",
    "numcodecs-wasm~=0.1.7",
    "numcodecs-wasm-sz3~=0.6.0",
    "numcodecs-wasm-zfp~=0.5.1",
    "numcodecs-wasm-zstd~=0.3.0",
    "xarray~=2025.4",
    "netcdf4~=1.7.2",
    "tqdm~=4.0",
    "matplotlib~=3.10.0",
    "mpl-ascii~=0.10.0",
]
dev = ["ruff~=0.9"]
examples = [
    "astropy~=6.0",
    "cdsapi~=0.7.6",
    "jupyterlab",
    "numcodecs-wasm~=0.1.7",
    "numcodecs-wasm-sperr~=0.1.0",
    "numcodecs-wasm-sz3~=0.6.0",
    "numcodecs-wasm-tthresh~=0.2.0",
    "numcodecs-wasm-zfp-classic~=0.3.1",
    "xarray~=2025.1",
    "netcdf4~=1.7.2",
    "matplotlib~=3.10.0",
]
fuzz = ["atheris~=2.3", "timeoutcontext~=1.2", "setuptools~=80.0"]
test = [
    "dask~=2025.4",
    "numcodecs-combinators~=0.2.10",
    "pytest~=8.3",
    "xarray~=2025.4",
    "zarr~=3.0; python_version >= '3.11'",
    "zarr-any-numcodecs~=0.1.2; python_version >= '3.11'",
]
doctest = ["griffe2md~=1.1", "pytest~=8.3", "pytest-codeblocks~=0.17.0"]
typing = ["mypy~=1.14"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"compression_safeguards" = ["py.typed"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "NPY"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
xfail_strict = true

[[tool.mypy.overrides]]
module = ["numpy_quaddtype.*", "sympy.*"]
follow_untyped_imports = true

[tool.hatch.build.targets.sdist]
include = ["/src", "/CITATION.cff", "/LICENSE", "/pyproject.toml", "/README.md"]

[tool.uv.workspace]
members = ["packages/numcodecs-safeguards"]
